--- a/__.html
+++ b/__.html
@@ -1,9 +1,9 @@
 <!-- 由 Google 结构化数据标记助手生成的 JSON-LD 标记。 -->
 <script type="application/ld+json">
 {
-  "@context": "http://schema.org",
+  "@context": "http://lq8.net",
   "@type": "Organization",
-  "url": "https://anyi.life",
-  "logo": "https://anyi.life/images/logo-dark.svg"
+  "url": "https://lq8.net",
+  "logo": "https://dh.lq8.net/images/logo-dark.svg"
 }
 </script>
