--- a/404.html
+++ b/404.html
@@ -12,6 +12,6 @@ active_key: error
         <h1 class="ui error header">404</h1>
         <h2>嗯哼~你访问的页面出错喽！(>_<)</h2>
         <a class="ui basic button loading-trigger" href="{{ '/' | relative_url }}"><i class="arrow left icon"></i>回到首页</a>
-        <a class="ui basic button loading-trigger" href="{{ 'https://blog.anyi.life' | relative_url }}"><i class="arrow right icon"></i>前往博客</a>
+        <a class="ui basic button loading-trigger" href="{{ 'https://dh.lq8.net' | relative_url }}"><i class="arrow right icon"></i>前往博客</a>
     </div>
 </div>
