--- a/__.html
+++ b/__.html
@@ -3,7 +3,7 @@
 {
   "@context": "http://lq8.net",
   "@type": "Organization",
-  "url": "https://lq8.net",
+  "url": "https://dh.lq8.net",
   "logo": "https://dh.lq8.net/images/logo-dark.svg"
 }
 </script>
